--- a/styles/mystyle.less
+++ b/styles/mystyle.less
@@ -1,6 +1,6 @@
-@basecolour: #532A78;
-@accent: #8849AD;
-@highlight: #111111;
+@basecolour: #111111;
+@accent: #666666;
+@highlight: #b30000;
 @background-grey: #e6e6e6;
 @code-grey: #eff0f1;
 
@@ -62,8 +62,9 @@ code {
 
 #footerBox {
     text-align: center;
-    font-size: 11px;
-    background-color: @background-grey;
+    color: white;
+    font-size: 12px;
+    background-color: @basecolour;
     margin: 0px auto;
     width: 100%;
 }
